--- a/RCL.Demo.SecondWebApp/Pages/Offer/Index.cshtml
+++ b/RCL.Demo.SecondWebApp/Pages/Offer/Index.cshtml
@@ -20,7 +20,7 @@
         else
         {
             <div class="alert alert-warning">
-                <p>Soory, you do not qualify for this free offer.</p>
+                <p>Sorry @User?.Identity?.Name, you do not qualify for this free offer.</p>
             </div>
         }
     </div>
